--- a/package.json
+++ b/package.json
@@ -12,10 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-<<<<<<< Updated upstream
-    "nodemon": "^2.0.19"
-=======
+    "nodemon": "^2.0.19",
     "concurrently": "^7.2.2"
->>>>>>> Stashed changes
   }
 }
