--- a/back/package.json
+++ b/back/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.7.7",
     "nodemon": "^2.0.19"
   }
 }
